libs/extractor/src/snapshots/extractor__tests__extract_keyframs_literal-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { keyframes } from \"@devup-ui/core\";\nkeyframes({\n  \"0%\": `\n  background-color: red;\n  color: blue;\n  `,\n  \"100%\": `\n  background-color: blue;\n  color: red;\n  `\n})\n\nkeyframes`\n  0% {\n    background-color: red;\n    color: blue;\n  }\n  100% {\n    background-color: blue;\n    color: red;\n  }\n`\nkeyframes({\n  \"0%\": {\n    backgroundColor: \"red\",\n    color: \"blue\"\n  },\n  \"100%\": {\n    backgroundColor: \"blue\",\n    color: \"red\"\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "0%": [
                        ExtractStaticStyle {
                            property: "background-color",
                            value: "red",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                        ExtractStaticStyle {
                            property: "color",
                            value: "blue",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "100%": [
                        ExtractStaticStyle {
                            property: "background-color",
                            value: "blue",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                        ExtractStaticStyle {
                            property: "color",
                            value: "red",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n\"KHbqc9fujynv6ls0he\";\n\"KHbqc9fujynv6ls0he\";\n\"KHbqc9fujynv6ls0he\";\n",
}
