libs/extractor/src/snapshots/extractor__tests__extract_responsive_conditional_style_props_with_class_name.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={[null, a === b ? (q > w ? \"4px\" : \"8px\") : \"3px\"]} className={\"exists\"} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "3px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "8px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment51) => <div className={`exists ${__devupAssignment51?.[0] ?? \"\"}`} style={{ ...__devupAssignment51?.[1] }} />)(((__devupLevel0, __devupLevel1) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1]\n\t},\n\t[__devupLevel0?.[2], __devupLevel1?.[2]]\n])(((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null), a === b ? q > w ? ((__devupValue) => [\n\t\"OLmargin-v4px-l1\",\n\t{},\n\t__devupValue\n])(\"4px\") : ((__devupValue) => [\n\t\"OLmargin-v8px-l1\",\n\t{},\n\t__devupValue\n])(\"8px\") : ((__devupValue) => [\n\t\"OLmargin-v3px-l1\",\n\t{},\n\t__devupValue\n])(\"3px\")));\n",
}
